--- a/client/layout/productdetail.html
+++ b/client/layout/productdetail.html
@@ -11,14 +11,14 @@
 
     <div class="row">
         <div class="span9">
-            <h1>Ipod touch</h1>
+            <h1>{{productdetail.name}}</h1>
         </div>
     </div>
     <hr>
 
     <div class="row">
         <div class="span3">
-            <img alt="" src="css/images/ipod_touch.jpg" />
+            <img alt="" src="css/images/{{productdetail.thumbnail}}" />
 
 
             <ul class="thumbnails">
@@ -50,7 +50,7 @@
             <div class="span6">
                 <address>
 				<strong>Brand:</strong> <span>Apple</span><br />
-				<strong>Product Code:</strong> <span>Product 14</span><br />
+				<strong>Product Code:</strong> <span>{{productdetail.id}}</span><br />
 				<strong>Reward Points:</strong> <span>0</span><br />
 				<strong>Availability:</strong> <span>Out Of Stock</span><br />
 			</address>
@@ -58,7 +58,7 @@
 
             <div class="span6">
                 <h2>
-				<strong>Price: $587.50</strong> <small>Ex Tax: $500.00</small><br /><br />
+				<strong>Price: {{productdetail.price|currency}}</strong> <small>Ex Tax: $500.00</small><br /><br />
 			</h2>
             </div>
 
